src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.card-body {
    @apply p-4;
}

.collapse-title {
    @apply pe-0 p-4;
}

.max-w-90 {
    max-width: 90%;
}

.loading-lg {
    width: 4rem;
}

.combobox-options-div {
    @apply absolute top-20 mt-2 max-h-60 w-full overflow-auto rounded-md bg-neutral;
}

.combobox-option {
    @apply relative text-white text-center select-none py-2;
}

.tab-group {
    @apply flex space-x-1 rounded-xl bg-neutral p-1;
}

.tab-option {
    @apply w-full text-white rounded-lg py-2.5 focus:outline-none;
}

.input::placeholder {
    opacity: 0.5;
}

